<resources>
    <string name="app_name">StoryApp</string>
    <string name="email">Email</string>
    <string name="check_email">Email invalid!</string>
    <string name="password">Password</string>
    <string name="check_password">Password invalid!</string>
    <string name="message_email">Input your email!</string>
    <string name="message_password">Input your password!</string>
    <string name="message_name">"Name must not be empty"</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="addStory">Add Story</string>
    <string name="description">Description</string>
    <string name="image_story">Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="date">Date</string>
    <string name="not_found">Cannot find your story</string>
    <string name="already_login">Already Login</string>
    <string name="story_success">Success added story</string>
    <string name="story_error">Added failed story</string>
    <string name="email_registered">Email already registered</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="logout">logout</string>
    <string name="no_response">Not Responding</string>
    <string name="add_maps">Click To Add Current Location</string>
    <string name="required_description">Description is Required</string>
    <string name="add_image">Please Add an Image</string>
    <string name="lat">Lat :</string>
    <string name="lon">Lon :</string>
    <string name="alert_message">Are You Sure Want To Logout?</string>
    <string name="alert_title">LOGOUT</string>
    <string name="alert_negativ">No</string>
    <string name="alert_positive">Yes</string>
    <string name="logout_succes">you are logged out</string>
    <string name="logo">Logo</string>
    <string name="shareloc">Share Location</string>
    <string name="retry">retry</string>
</resources>